# MoPE-CoA

./: README.md  gate.json  pyproject.toml  requirements.txt
docs/: architecture.md
mope/: __init__.py  cli.py  config.py  data_prep.py  gate.py  hf_integration.py  logging.py  model.py  mope_layer.py  nanogpt_integration.py  pipeline.py  retrieval.py  server.py  task_engine.py  tools.py  torch_mope.py  training.py  vectorizer.py
scripts/: eval_qa_em_f1.py  nanogpt_mope_sft.py  nanogpt_mope_sft_medium.py  qwen_mope_distill.py  qwen_mope_smoke.py  rl_gate_reinforce.py  sft_route_train.py  torch_mope_smoke.py  torch_mope_train_example.py
scripts/nanogpt/: __init__.py  sft.py
scripts/qwen/: __init__.py  build_prompts.py  distill.py  eval_em_f1.py  smoke.py
tests/: test_mope.py  test_retrieval.py  test_tasks.py
