[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "mope"
version = "0.1.0"
description = "MoPE: Modular Pipeline Experts for retrieval-augmented reasoning and nanoGPT integration"
readme = "README.md"
authors = [{name = "MoPE Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  # Runtime optional: core package itself is dependency-light; CLI/server add deps via extras
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.7.0"]
server = ["fastapi>=0.110.0", "uvicorn>=0.24.0"]
tools = ["requests>=2.31.0"]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.8",
  "mypy>=1.10.0",
]

[project.scripts]
mope = "mope.cli:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
